--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -125,7 +125,7 @@ jobs:
               "slotSetting": false
             }
           ]
-        connection-string-settings: |
+        connection-string-json: |
           [
             {
               "name": "MyDbConnection",
